--- a/src/styles/stylepro.css
+++ b/src/styles/stylepro.css
@@ -91,7 +91,7 @@ section{
     display: flex;
     align-items: center;
     padding: 0 9%;
-    background: url('./sam\ \(1\).png');
+    background: url('"E:\Personal-Portfolio\src\assests\img\sam (1).png"');
     background-size: cover;
     background-position: center;
 }
