--- a/src/styles/stylepro.css
+++ b/src/styles/stylepro.css
@@ -91,7 +91,7 @@ section{
     display: flex;
     align-items: center;
     padding: 0 9%;
-    background: url("./src/assests/img/sam(1).png");
+    background: url("");
     background-size: cover;
     background-position: center;
 }
