--- a/src/styles/stylepro.css
+++ b/src/styles/stylepro.css
@@ -174,7 +174,7 @@ section{
     font-weight: 600;
     letter-spacing: .1rem;
     color: var(--bg-color);
-    border-radius: 15rem;
+    border-radius: 0%;
     z-index: 1;
     transition: .5s;
  }
@@ -205,7 +205,7 @@ section{
     background: var(--bg-color);
     z-index: -1;
     transition: .2s;
-    border-radius: 15rem;
+    border-radius: 0%;
  }
 
  .btn-box .btn:hover::before{
